subdir('protocols')

test('core/utils/game_def_expression', executable(
  'test-game_def_expression',
  core_sources,
  'test-game_def_expression.vala',
  dependencies : dependencies,
))

test('core/utils/parse_address', executable(
  'test-parse_address',
  core_sources,
  'test-parse_address.vala',
  dependencies : dependencies,
))
