protocols_dir = join_paths(gsw_datadir, 'protocols')

install_subdir('lib', install_dir: protocols_dir)

install_data(
  files(
    'ase.lua',
    'gamespy.lua',
    'gamespy2.lua',
    'gamespy3.lua',
    'quake2.lua',
    'quake3.lua',
    'source-console.lua',
    'source.lua',
  ),
  install_dir: protocols_dir,
)
