schemas_dir = get_option('prefix') / get_option('datadir') / 'glib-2.0' / 'schemas'

settings_schemas = [
  'org.lxndr.gswatcher.Buddy.gschema.xml',
  'org.lxndr.gswatcher.Preferences.gschema.xml',
  'org.lxndr.gswatcher.Server.gschema.xml',
]

install_data(settings_schemas, install_dir: schemas_dir)
