test('protocols/source', executable(
  'test-source_protocol',
  core_sources,
  test_core_sources,
  'test-source_protocol.vala',
  dependencies : dependencies,
))

test('protocols/telnet-console', executable(
  'test-telnet-console',
  core_sources,
  test_core_sources,
  'test-telnet-console.vala',
  dependencies : dependencies,
))
